Add factory to create triangles according the distance

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tradeshift\\Triangle\\Tests\\": "test"
+            "Tradeshift\\Triangle\\Tests\\": "tests"
         }
     },
     "authors": [
